# xmas_lights

./: Cargo.toml  README.md
.cargo/: config.toml
src/: base.rs  lib.rs  main.rs  maths.rs
src/patterns/: fireworks.rs  mod.rs  speed_change.rs
