[package]
name = "xmas_2024"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
pimoroni-plasma-2040 = "0.7.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.10.2"
smart-leds = "0.3.0"
ws2812-pio = "0.8.0"
